--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 
         @media (max-width: 960px){
             body{
-                background-color: red;
+                width: fit-content;
             }
             .container-nav{
                 visibility: hidden;
