--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         body {
             background: url(./assets/images/main-img.png);
             background-repeat: no-repeat;
+            background-size: cover;
         }
 
         .mainpage {
