--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         body {
             background: url(./assets/images/main-img.png);
             background-repeat: no-repeat;
-            background-size: cover;
+            background-size: contain;
         }
 
         .mainpage {
