--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
             background: url(./assets/images/main-img.png);
             background-repeat: no-repeat;
             background-size: contain;
+            min-height: 600px;
         }
 
         .mainpage {
